--- a/WebDriverMVNPrj/test-output/old/Default suite/methods.html
+++ b/WebDriverMVNPrj/test-output/old/Default suite/methods.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79e8cb">  <td>19/06/11 18:01:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HardAssertionExample.assertEquals()[pri:0, instance:testnglearning.HardAssertionExample@28f67ac7]">assertEquals</td> 
-  <td>main@357863579</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>19/06/11 18:01:46</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HardAssertionExample.assertNotEquals()[pri:2, instance:testnglearning.HardAssertionExample@28f67ac7]">assertNotEquals</td> 
-  <td>main@357863579</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>19/06/11 18:01:46</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HardAssertionExample.assertTrue()[pri:3, instance:testnglearning.HardAssertionExample@28f67ac7]">assertTrue</td> 
-  <td>main@357863579</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>19/06/11 18:01:46</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HardAssertionExample.assertFalse()[pri:4, instance:testnglearning.HardAssertionExample@28f67ac7]">assertFalse</td> 
-  <td>main@357863579</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>19/06/11 18:01:46</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HardAssertionExample.assertNull()[pri:5, instance:testnglearning.HardAssertionExample@28f67ac7]">assertNull</td> 
-  <td>main@357863579</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>19/06/11 18:01:46</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HardAssertionExample.assertNotNull()[pri:6, instance:testnglearning.HardAssertionExample@28f67ac7]">assertNotNull</td> 
-  <td>main@357863579</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>19/06/12 19:26:28</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestParameterization.setup()[pri:0, instance:testnglearning.TestParameterization@129a8472]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@905544614</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>19/06/12 19:26:34</td>   <td>5772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParameterization.navigateURL()[pri:0, instance:testnglearning.TestParameterization@129a8472]">&gt;&gt;navigateURL</td> 
+<td>&nbsp;</td>  <td>main@905544614</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>19/06/12 19:26:37</td>   <td>8993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParameterization.doLogin(java.lang.String, java.lang.String)[pri:0, instance:testnglearning.TestParameterization@129a8472]">doLogin</td> 
+  <td>main@905544614</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>19/06/12 19:26:39</td>   <td>10912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParameterization.navigateURL()[pri:0, instance:testnglearning.TestParameterization@129a8472]">&gt;&gt;navigateURL</td> 
+<td>&nbsp;</td>  <td>main@905544614</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>19/06/12 19:26:41</td>   <td>13206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParameterization.doLogin(java.lang.String, java.lang.String)[pri:0, instance:testnglearning.TestParameterization@129a8472]">doLogin</td> 
+  <td>main@905544614</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>19/06/12 19:26:42</td>   <td>14082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParameterization.navigateURL()[pri:0, instance:testnglearning.TestParameterization@129a8472]">&gt;&gt;navigateURL</td> 
+<td>&nbsp;</td>  <td>main@905544614</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>19/06/12 19:26:44</td>   <td>16139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParameterization.doLogin(java.lang.String, java.lang.String)[pri:0, instance:testnglearning.TestParameterization@129a8472]">doLogin</td> 
+  <td>main@905544614</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>19/06/12 19:26:45</td>   <td>16904</td> <td>&nbsp;</td><td title="&lt;&lt;TestParameterization.tearDown()[pri:0, instance:testnglearning.TestParameterization@129a8472]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@905544614</td>   <td></td> </tr>
 </table>
