--- a/WebDriverMVNPrj/test-output/index.html
+++ b/WebDriverMVNPrj/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,12 +49,12 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\abc\AppData\Local\Temp\testng-eclipse--126075061\testng-customsuite.xml</span>
+                    <span>C:\Users\abc\AppData\Local\Temp\testng-eclipse-2124807824\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Default_suite">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,21 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods, 1 failed,   5 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.HardAssertionExample" hash-for-method="assertEquals">assertEquals</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -116,27 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.HardAssertionExample" hash-for-method="assertFalse">assertFalse</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.TestParameterization" hash-for-method="doLogin(trainer, trainer1)">doLogin(trainer, trainer1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.HardAssertionExample" hash-for-method="assertNotEquals">assertNotEquals</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.TestParameterization" hash-for-method="doLogin(java, java1)">doLogin(java, java1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.HardAssertionExample" hash-for-method="assertNotNull">assertNotNull</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.HardAssertionExample" hash-for-method="assertNull">assertNull</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.HardAssertionExample" hash-for-method="assertTrue">assertTrue</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testnglearning.TestParameterization" hash-for-method="doLogin(seleniumcoaching, selen1)">doLogin(seleniumcoaching, selen1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -151,94 +127,34 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">testnglearning.HardAssertionExample</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="assertEquals">
-                  </a> <!-- assertEquals -->
-                  <span class="method-name">assertEquals</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [This assertion will fail] but found [assertion]
-	at org.testng.Assert.fail(Assert.java:94)
-	at org.testng.Assert.failNotEquals(Assert.java:513)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:135)
-	at org.testng.Assert.assertEquals(Assert.java:116)
-	at org.testng.Assert.assertEquals(Assert.java:190)
-	at org.testng.Assert.assertEquals(Assert.java:200)
-	at testnglearning.HardAssertionExample.assertEquals(HardAssertionExample.java:13)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:86)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:645)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:822)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1130)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:129)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:112)
-	at org.testng.TestRunner.privateRun(TestRunner.java:782)
-	at org.testng.TestRunner.run(TestRunner.java:632)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:366)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:361)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:319)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:268)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1244)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1169)
-	at org.testng.TestNG.run(TestNG.java:1064)
-	at org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:113)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:206)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:177)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testnglearning.HardAssertionExample</span>
+              <span class="class-name">testnglearning.TestParameterization</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="assertFalse">
-                  </a> <!-- assertFalse -->
-                  <span class="method-name">assertFalse</span>
+                  <a name="doLogin(trainer, trainer1)">
+                  </a> <!-- doLogin(trainer, trainer1) -->
+                  <span class="method-name">doLogin</span>
+                  <span class="parameters">(trainer, trainer1)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="assertNotEquals">
-                  </a> <!-- assertNotEquals -->
-                  <span class="method-name">assertNotEquals</span>
+                  <a name="doLogin(java, java1)">
+                  </a> <!-- doLogin(java, java1) -->
+                  <span class="method-name">doLogin</span>
+                  <span class="parameters">(java, java1)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="assertNotNull">
-                  </a> <!-- assertNotNull -->
-                  <span class="method-name">assertNotNull</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="assertNull">
-                  </a> <!-- assertNull -->
-                  <span class="method-name">assertNull</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="assertTrue">
-                  </a> <!-- assertTrue -->
-                  <span class="method-name">assertTrue</span>
+                  <a name="doLogin(seleniumcoaching, selen1)">
+                  </a> <!-- doLogin(seleniumcoaching, selen1) -->
+                  <span class="method-name">doLogin</span>
+                  <span class="parameters">(seleniumcoaching, selen1)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -246,7 +162,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\abc\AppData\Local\Temp\testng-eclipse--126075061\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\abc\AppData\Local\Temp\testng-eclipse-2124807824\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -255,18 +171,9 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testnglearning.HardAssertionExample&quot;/&gt;
+      &lt;class name=&quot;testnglearning.TestParameterization&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
-  &lt;test name=&quot;Default test(failed)&quot;&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;testnglearning.HardAssertionExample&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;assertEquals&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testnglearning.HardAssertionExample --&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Default test(failed) --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -279,9 +186,6 @@
             <ul>
               <li>
                 <span class="test-name">Default test (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Default test(failed) (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -307,36 +211,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'assertEquals')
-data.setCell(0, 2, 'testnglearning.HardAssertionExample')
-data.setCell(0, 3, 17);
+data.setCell(0, 1, 'doLogin')
+data.setCell(0, 2, 'testnglearning.TestParameterization')
+data.setCell(0, 3, 1919);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'assertNotNull')
-data.setCell(1, 2, 'testnglearning.HardAssertionExample')
-data.setCell(1, 3, 2);
+data.setCell(1, 1, 'doLogin')
+data.setCell(1, 2, 'testnglearning.TestParameterization')
+data.setCell(1, 3, 875);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'assertNotEquals')
-data.setCell(2, 2, 'testnglearning.HardAssertionExample')
-data.setCell(2, 3, 2);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'assertFalse')
-data.setCell(3, 2, 'testnglearning.HardAssertionExample')
-data.setCell(3, 3, 1);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'assertTrue')
-data.setCell(4, 2, 'testnglearning.HardAssertionExample')
-data.setCell(4, 3, 1);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'assertNull')
-data.setCell(5, 2, 'testnglearning.HardAssertionExample')
-data.setCell(5, 3, 1);
+data.setCell(2, 1, 'doLogin')
+data.setCell(2, 2, 'testnglearning.TestParameterization')
+data.setCell(2, 3, 763);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 ms</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -362,33 +254,39 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testnglearning.HardAssertionExample</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">assertEquals</span>
+              <div class="chronological-class-name">testnglearning.TestParameterization</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-test before -->
+              <div class="configuration-method before">
+                <span class="method-name">navigateURL</span>
+                <span class="method-start">5775 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">assertNotEquals</span>
-                <span class="method-start">24 ms</span>
+                <span class="method-name">doLogin(trainer, trainer1)</span>
+                <span class="method-start">8995 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">navigateURL</span>
+                <span class="method-start">10915 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">assertTrue</span>
-                <span class="method-start">27 ms</span>
+                <span class="method-name">doLogin(seleniumcoaching, selen1)</span>
+                <span class="method-start">13209 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">navigateURL</span>
+                <span class="method-start">14085 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">assertFalse</span>
-                <span class="method-start">30 ms</span>
+                <span class="method-name">doLogin(java, java1)</span>
+                <span class="method-start">16142 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">assertNull</span>
-                <span class="method-start">33 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">assertNotNull</span>
-                <span class="method-start">35 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">16907 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
